@@ -23,6 +23,7 @@ tab.concentration=Concentration
 units.centimeters=cm
 units.liters=L
 units.molesPerLiter=mol/L
+units.M=M
 units.mM=mM
 units.uM=\u00b5M
 variable=variable
