@@ -6,9 +6,11 @@ import java.awt.geom.Rectangle2D;
 import java.text.MessageFormat;
 
 import edu.colorado.phet.beerslawlab.beerslaw.model.BeersLawSolution;
+import edu.colorado.phet.beerslawlab.beerslaw.model.BeersLawSolution.PureWater;
 import edu.colorado.phet.beerslawlab.common.BLLConstants;
 import edu.colorado.phet.beerslawlab.common.BLLResources.Strings;
 import edu.colorado.phet.common.phetcommon.model.property.Property;
+import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
 import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
 import edu.colorado.phet.common.piccolophet.nodes.kit.ZeroOffsetNode;
 import edu.umd.cs.piccolo.PNode;
@@ -31,7 +33,7 @@ public class ConcentrationControlNode extends PNode {
         labelNode.setFont( new PhetFont( BLLConstants.CONTROL_FONT_SIZE ) );
         PPath sliderNode = new PPath( new Rectangle2D.Double( 0, 0, TRACK_SIZE.width, TRACK_SIZE.height ) ); //TODO use a slider
         PPath textFieldNode = new PPath( new Rectangle2D.Double( 0, 0, 40, 40 ) ); //TODO use a JTextField
-        PText unitsNode = new PText( "????" );
+        final PText unitsNode = new PText( "????" );
         unitsNode.setFont( new PhetFont( BLLConstants.CONTROL_FONT_SIZE  ) );
 
         // rendering order
@@ -49,5 +51,14 @@ public class ConcentrationControlNode extends PNode {
                               sliderNode.getFullBoundsReference().getCenterY() - ( textFieldNode.getFullBoundsReference().getHeight() / 2 ) );
         unitsNode.setOffset( textFieldNode.getFullBoundsReference().getMaxX() + 5,
                               textFieldNode.getFullBoundsReference().getCenterY() - ( unitsNode.getFullBoundsReference().getHeight() / 2 ) );
+
+        // units are specific to the solution
+        solution.addObserver( new VoidFunction1<BeersLawSolution>() {
+            public void apply( BeersLawSolution solution ) {
+                setVisible( !( solution instanceof PureWater ) );
+                unitsNode.setText( solution.getDisplayUnits() );
+
+            }
+        });
     }
 }
